# api/v1/swagger.json
@@ -52,6 +52,35 @@
             }
           }
         }
+      },
+      "/expenses/{expenseId}": {
+        "get": { 
+          "summary": "Get expense by ID",
+          "operationId": "Get expense by ID",
+          "parameters": [
+            {
+              "description": "The ID of the expense",
+              "name": "expenseId",
+              "in": "path",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+                "description": "OK",
+                "schema": {
+                    "$ref": "#/definitions/Expense"
+                }
+            },
+            "400": {
+                "description": "BAD REQUEST",
+                "schema": {
+                    "$ref": "#/definitions/RouteError"
+                }
+            }
+          }
+        }
       }
     },
     "definitions": {
